# CC1895

./: Cargo.toml  LICENSE_MIT  README.md  docker-compose.yaml
linux_exe/: Cargo.toml
nucleo_476/: Makefile  deploy.sh  nucleo_476.ioc
nucleo_476/Src/: main.c
rust_lib/: Cargo.toml
rust_lib/src/: chip.rs  city.rs  intro.rs  lib.rs  math.rs  music.rs  primitive.rs  rocket.rs  space.rs  tuning.rs
src/: chip.rs  chip_world.rs  city.rs  intro.rs  lib.rs  primitive.rs  rocket.rs  space.rs  tuning.rs
www/: index.html  index.js  package-lock.json  package.json
