[package]
name = "democc19"
version = "0.1.0"
authors = ["Strokov Andrew <mail@s3f.ru>"]
edition = "2018"

[lib]
crate-type = ["rlib", "staticlib"]

[features]
cmsis-os = []
linux-os = []
stm32-hal = []

[dependencies]


[build-dependencies]

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 2
panic = "abort"
